   become too painful with memory overheads, also when compiling.
 - Add 'output-limit' verdict.
 - Renamed dj-setup-database to dj_setup_database for consistency
   with other script names.
 - Update ACE editor to version 1.2.3, jQuery to version 2.2.4.
 - Implement better password hashing (#237 thanks Bert Peters).
 - Allow float timelimits (#235).

Version 5.1.0 - 7 December 2015
-------------------------------
 - Minimum PHP version is now 5.4.
 - Minimum MySQL/MariaDB version is now 5.5.3.
 - More pervasive UTF-8 support.
   Also introduces new DJ_MYSQL_COLLATION configuration setting.
 - Remove CHROOT_SCRIPT configuration setting: automatically run
   chroot-startstop.sh if a pre-built chroot tree is found.
 - Update ACE editor to version 1.2.2, JScolor to version 1.4.5.
 - Support microsecond resolution contest times and timezones.
 - Port XML event feed from ICPC-live branch.
 - Port clarification categories feature from ICPC-live branch.
 - Merge Debian/Ubuntu chroot scripts and add minor fixes.
 - Drop CHROOT_SCRIPT setting, use hardcoded chroot-startstop.sh.
 - Fix float compare script output and relative checking.
 - Fix various small bugs in problem ZIP import.
 - Fix ACE editor to resize after tab change (#145).
 - Fix variance calculation in judging_statistics script.
 - [security] Disable GCC family automatic language detection to
   prevent submitting other languages or object/executable code.
 - Write compare script errors to logfile (#179).
 - Substitute invalid Unicode characters instead of producing
   blank output.
 - Various smaller fixes and improvements to the jury interface.

Version 5.0.0 - 11 August 2015
------------------------------
 - Removed support for 'presentation-error' judgement.
 - Various documentation improvements.
 - Preserve aspect ratio when creating testcase image thumbnails.
 - Fixed bug that REST API scoreboard "solved" was always true.
   Thanks Shuhei Takahashi.