@@ -632,7 +632,7 @@ function submit_solution($team, $prob, $contest, $lang, $files, $filenames, $ori
 	for($rank=0; $rank<count($files); $rank++) {
 		$DB->q('INSERT INTO submission_file
 		        (submitid, filename, rank, sourcecode) VALUES (%i, %s, %i, %s)',
-		       $id, $filenames[$rank], $rank, dj_get_file_contents($files[$rank], false));
+		       $id, $filenames[$rank], $rank, dj_get_file_contents($files[$rank]));
 	}
 	$DB->q('COMMIT');
 
